src/components/TopNav/_top-nav.scss
@import '../../styles/sass/mixins';
@import '../../styles/sass/variables';



.header{
    max-width: 100%;
    box-shadow: 5px 5px 20px gray;
    height:200px;
    
  }
  
  .topnavrow div{
    display: inline-block;
  }
  
  .brand{
    color: white;
    margin-left: 2%;
    padding: 0.8em;
    width: 10%;
  }
  
  .inp-container input{
    display: inline-block;
    width: 75%;
    height: $element-height;
  }
  .inp-container button{
    width: 10%;
    height: $element-height;
    border: none;
    background-color: #dadada;
  }
  
  .dropdown{
    width: 15%;
  }
  .select-btn{
    height: $element-height;
    border: none;
    background-color: #dadada;
    font-weight: 600;
  }
  
  .login-container {
  
    width:15%;
    color:white;
    text-align:right;
    margin: 1.7em  0.2em 0 0;
  }
  
  .login-container i,h5{
    display:inline-block;
  }
  
  .login-container a{
    text-decoration: none;
    color:white;
  }
  
  .user-icon{
   margin-right: 0.4em;
   padding: 0.2em;
   font-size:1.3em;
  
  }
  
  .cart-wishlist .list-icon{
  
    color:white;
    font-size:1.3em;
    list-style-type:none;
    display:inline-block;
    margin-right:0.5em;
  
  }
  
  .cart-wishlist
  {
    width:7%;
    margin-top:1.7em;
    margin-left:1em;
  }

  .list-icon{

  .cart-item-count{


    border-radius:50%;
    background-color: gold;
    position:absolute;
    height:1em;
    width: 1em;
    left: 83%;
    top:1.8%;
    text-align: center;
    line-height: 90%;
    p{

        font-size:0.8em;
        font-weight:600;
        color:black;
    }


  }


  }
  

